# PROYECTO_FINAL_ALSE

./: CMakeLists.txt  Doxyfile
docs/html/: DatabaseManager_8cpp.html  DatabaseManager_8cpp__incl.map  DatabaseManager_8cpp__incl.md5  DatabaseManager_8cpp_source.html  DatabaseManager_8h.html  DatabaseManager_8h__dep__incl.map  DatabaseManager_8h__dep__incl.md5  DatabaseManager_8h__incl.map  DatabaseManager_8h__incl.md5  DatabaseManager_8h_source.html  InventoryManager_8cpp.html  InventoryManager_8cpp__incl.map  InventoryManager_8cpp__incl.md5  InventoryManager_8cpp_source.html  InventoryManager_8h.html  InventoryManager_8h.js  InventoryManager_8h__dep__incl.map  InventoryManager_8h__dep__incl.md5  InventoryManager_8h__incl.map  InventoryManager_8h__incl.md5  InventoryManager_8h_source.html  annotated.html  annotated_dup.js  classAddDialog-members.html  classAddDialog.html  classAddDialog.js  classAddDialog__coll__graph.map  classAddDialog__coll__graph.md5  classAddDialog__inherit__graph.md5  classAddDialog_a3f35887c64e8de108ef4e45850d560a9_cgraph.map  classAddDialog_a3f35887c64e8de108ef4e45850d560a9_cgraph.md5  classAddDialog_a3f35887c64e8de108ef4e45850d560a9_icgraph.map  classAddDialog_a3f35887c64e8de108ef4e45850d560a9_icgraph.md5  classAddDialog_a4751c7ced2d3c0497b03a97018c25630_cgraph.map  classAddDialog_a4751c7ced2d3c0497b03a97018c25630_cgraph.md5  classAddDialog_a5120327b094f97585324f46bf09a1224_icgraph.map  classAddDialog_a5120327b094f97585324f46bf09a1224_icgraph.md5  classAddDialog_a681938827598fc3404fea3175825ec04_icgraph.map  (+183 more)
include/: DatabaseManager.h  InventoryManager.h  component.h  delegate.h  mainwindow.h  report.h
src/: DatabaseManager.cpp  InventoryManager.cpp  component.cpp  main.cpp  mainwindow.cpp  report.cpp
(+146 files in other folders)
